--- a/site_imobiliario/templates/area_corretor.html
+++ b/site_imobiliario/templates/area_corretor.html
@@ -94,7 +94,7 @@
             <div class="col-10 offset-2">
                 <div class="content" >
                     {% if show_dashboard %}
-                    <iframe title="Report Section" width="1140" height="642.25" src="https://app.powerbi.com/view?r=eyJrIjoiODA0NGYwOTEtYzM4MS00MmE3LTlhMTAtYmFjZThkZjUyYmVjIiwidCI6IjJiYTIyMTYyLWY2NDQtNGE0Yy05OWY5LTlhZWM3YjAzODNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+                    <iframe title="Report Section" width="1140" height="642.25" src="https://..." frameborder="0" allowFullScreen="true"></iframe>
                     {% endif %}
                 </div>
             </div>
