--- a/site_imobiliario/templates/area_corretor.html
+++ b/site_imobiliario/templates/area_corretor.html
@@ -3,58 +3,9 @@
 
 <head>
     <title>Dashboard</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='area_corretor.css') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <style>
-        body {
-            padding-top: 56px;
-            background: linear-gradient(to top, #ffff99, #ffffe0);
-
-
-        }
-
-        .navbar {
-            background-color: #343a40;
-            color: white;
-        }
-
-        .navbar-brand {
-            font-size: 24px;
-            margin-right: auto;
-            margin-left: -110px;
-        }
-
-        .user-icon {
-            margin-left: auto;
-            margin-right: -80px;
-        }
-
-        .sidebar {
-            background-color: #343a40;
-            color: white;
-            height: 100vh;
-            width: 250px;
-            opacity: ;
-        }
-
-        .sidebar a {
-            color: white;
-            margin-top: 30px;
-        }
-
-        .sidebar a:hover {
-            color: #ffc107;
-            background-color: #ffffe0  ;
-            height: 10vh;
-        }
-
-        .content {
-            margin-left: 30px;
-            margin-top: -670px;
-        }
-
-    </style>
 </head>
 
 <body>
