--- a/site_imobiliario/templates/excluir_propriedade.html
+++ b/site_imobiliario/templates/excluir_propriedade.html
@@ -1,22 +1,8 @@
 {% extends "template.html" %}
 
 {% block content %}
-    <style>
-        body {
-            background-image: url('https://static.vecteezy.com/ti/vetor-gratis/p2/2285604-preto-abstrato-fundo-com-caracteristicas-de-sobreposicao-vetor.jpg');
-            background-size: cover;
-            background-position: botton;
-            background-repeat: no-repeat;
+<link rel="stylesheet" href="{{ url_for('static', filename='excluir_propriedade.css') }}">
 
-        }
-
-        .card {
-            background-color: rgba(255, 0, 0, 0.4);
-            margin-top: 150px;
-
-
-        }
-    </style>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
