--- a/site_imobiliario/templates/login.html
+++ b/site_imobiliario/templates/login.html
@@ -1,47 +1,9 @@
 {% extends 'template.html' %}
 
 {% block content %}
-    <style>
-        body {
-            background-image: url("https://www.arealpires.com.br/wp-content/uploads/2017/12/Corretor-Imobili--ria-Incorporadora.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-
-        }
-
-        .card {
-            width: 300px;
-            margin: 100px;
-            float: right;
-            opacity: 0.9;
-            height: 350px;
-        }
-
-        .card-title {
-            text-align: center;
-            margin-bottom: 20px;
-            margin-top: 20px;
+<link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
 
 
-        }
-
-        .form-control.custom-input {
-            border-radius: 10px;
-        }
-
-        .form-label {
-            color: white;
-        }
-
-        .custom-input-group {
-            display: flex;
-            justify-content: space-between;
-        }
-
-
-
-
-    </style>
     <div class="container">
         <div class="card">
             <div class="card-body">
