--- a/site_imobiliario/templates/propriedade_nao_encontrada.html
+++ b/site_imobiliario/templates/propriedade_nao_encontrada.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
   <title>Propriedade não encontrada</title>
 </head>
 <body>
