--- a/site_imobiliario/templates/propriedades.html
+++ b/site_imobiliario/templates/propriedades.html
@@ -1,87 +1,14 @@
 {% extends "template.html" %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='propriedades.css') }}">
+
     <img src="https://th.bing.com/th/id/R.4db236483afd76b763bbbe0d12fed257?rik=AUrUN8wiCEIRIA&riu=http%3a%2f%2fwww.adplaw.co.za%2fwp-content%2fuploads%2f2017%2f11%2fcommercial.png&ehk=8iYjl805CfW%2fl5trLbpX24wbLjpmv5r7rGIZvU1804M%3d&risl=&pid=ImgRaw&r=0" class="img-fluid" alt="Capa" style="width: 100%; height: 400px;margin-top: -20px;">
 
     <div class="container">
         <h1 class="page-title">Lista de Imóveis Cadastrados</h1>
-        <style>
-        .input-card {
-            background-color: transparent;
-            border-color: #ffc107;
-            font-size: small;
-            color: white; /* Adicionado */
-        }
-        .fixed-card {
-            position: absolute;
-            top: 40;
-            left: 0;
-            z-index: 1000;
-            width: 100%;
-        }
-        .tipo-imovel {
-          font-size: 1.7rem;
-        }
 
-        .valor-imovel {
-          color: white;
-          font-weight: bold;
-          font-size: 1.7rem;
-          color: white;
-        }
-
-        .custom-card {
-            height: 50px; /* Defina a altura desejada */
-            width: 200px; /* Defina a largura desejada */
-            padding: 0px 0px; /* Espaçamento interno */
-            margin-top: 1rem;
-        }
-        .card-body .row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-left: 13px;
-
-        }
-        .number-size {
-          font-size: 1.5rem; /* Defina o tamanho desejado para os números */
-        }
-        .icon-size {
-          font-size: 1.6rem; /* Defina o tamanho desejado para os ícones */
-        }
-
-        .footer {
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        .footer-line {
-            margin-bottom: 10px;
-            border-bottom: 1px solid #ffffff;
-        }
-
-        .footer-icons {
-            margin-top: 10px;
-        }
-
-        .footer-icons a {
-            color: #f8f9fa;
-            margin-right: 10px;
-            font-size: 24px; /* Tamanho dos ícones */
-        }
-
-        .footer-icons span {
-            color: #f8f9fa;
-            margin-right: 10px;
-        }
-
-
-
-
-
-        </style>
-
-        <!-- Adicione o dropdown para a ordenação -->
+        <!-- dropdown para a ordenação -->
         <div class="dropdown" style="position: absolute; top: 540px; right: 109px;">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Ordenar por
@@ -89,7 +16,6 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="{{ url_for('propriedades', ordenacao='valor', direcao='asc') }}">Valor crescente</a>
                 <a class="dropdown-item" href="{{ url_for('propriedades', ordenacao='valor', direcao='desc') }}">Valor decrescente</a>
-                <!-- Adicione mais opções de ordenação aqui, se desejar -->
             </div>
         </div>
 
